
	* config.guess: Recognise armv[234][lb] types (ie. `armv*').
		
1999-01-13  Ben Elliston  <bje@cygnus.com>

	* autoconf.sh: Remove -v and --verbose from the command line usage
	help. They do not exist.

1999-01-12  Scott Bambrough  <scottb@corelcomputer.com>

	* config.sub: Recognize armv[234][lb] types (ie. `armv*'). Add
	alias for the NetWinder; set company to `corel'.
	
1999-01-11  Ben Elliston  <bje@cygnus.com>

	* config.guess: Detect HP-UX on MPE/iX machines.

	* acgeneral.m4 (AC_ACVERSION): Increment to 2.14.

	* autoconf.texi (EDITION): Likewise.
	(VERSION): Likewise.

1999-01-10  Ben Elliston  <bje@cygnus.com>

	* config.guess: Detect Rhapsody on PowerPC and other machines.
	Contributed by Wilfredo Sanchez <wsanchez@apple.com>.
	
	* config.sub: Add rhapsody and openstep aliases.

1999-01-09  Ben Elliston  <bje@cygnus.com>

	* Makefile.in (html): New target. Generate HTML documentation.
	(install-strip): Add.
	Contributed by Wilfredo Sanchez <wsanchez@apple.com>.
	
	* autoconf.texi (AC_CHECK_LIB): Explain more. Contributed by Bob
	Friesenhahn <bfriesen@simple.dallas.tx.us>.
	(UPDATED): Bump to 1999.

	* config.guess: Distinguish between OpenStep and NeXTStep
	platforms. Contributed by Wilfredo Sanchez <wsanchez@apple.com>.

1999-01-09  J"orn Rennecke  <amylaar@cygnus.co.uk>

	* acgeneral.m4 (AC_CHECK_FUNC): Don't actually call the function.
	
1999-01-09  H.J. Lu  <hjl@lucon.org>

	* config.guess: Permit multiple concurrent instances by including
	the process ID of the shell running this script in temporary
	filenames.
		
1999-01-08  Ben Elliston  <bje@cygnus.com>

	* autoconf.sh: More useful and up-to-date help from the --help
	option. Contributed by Akim Demaille <demaille@inf.enst.fr>.

	* autoheader.sh: Likewise.

	* autoreconf.sh: Likewise.

	* autoscan.pl: Likewise.

	* autoupdate.sh: Likewise.

	* ifnames.sh: Likewise.

	* config.guess: Detect Cray T3E and NEC SX-4, SX-5 machines.
	Contributed by Andreas Schott <schott@rzg.mpg.de>.
